# GraKeL

./: README.md  pyproject.toml  setup.py
.github/workflows/: release.yaml  test.yaml
doc/: conf.py
doc/documentation/: installation.rst
doc/documentation/code_for_examples/: vertex_kernel.py  vertex_kernel_advanced.py
examples/: document_retrieval_example.py  erdos_renyi.py  node_attributed_dataset.py  nx_to_grakel.py  optimizing_hyperparameters.py  plot_pipeline_example.py  shortest_path.py  weisfeiler_lehman_subtree.py
grakel/: __init__.py  graph.py  graph_kernels.py  tools.py  utils.py
grakel/datasets/: __init__.py  base.py
grakel/kernels/: __init__.py  core_framework.py  edge_histogram.py  graph_hopper.py  graphlet_sampling.py  hadamard_code.py  kernel.py  lovasz_theta.py  multiscale_laplacian.py  neighborhood_hash.py  neighborhood_subgraph_pairwise_distance.py  odd_sth.py  propagation.py  pyramid_match.py  random_walk.py  shortest_path.py  subgraph_matching.py  svm_theta.py  vertex_histogram.py  weisfeiler_lehman.py  weisfeiler_lehman_optimal_assignment.py
grakel/kernels/_c_functions/: functions.pyx
grakel/kernels/_isomorphism/: __init__.py  bliss.pyx
grakel/utils/: __init__.py  _misc.py
misc/: install_pynauty.py
tests/: __main__.py  test_Kernel.py  test_common.py  test_graph.py  test_graph_kernels.py  test_kernels.py  test_utils.py
tutorials/digit_classification/: digit_classification.ipynb
tutorials/text_categorization/: text_categorization.ipynb
